--- a/assets/sass/_style.scss
+++ b/assets/sass/_style.scss
@@ -40,6 +40,43 @@ nav{
 		}
 	}
 }
+
+.enlaces{
+    ul{
+        list-style: none;
+        li{
+           display: inline-block;
+           padding: 10px;
+           border-radius: 10px;
+        }
+    }
+     a{
+        text-decoration: none;
+        color: #fff;
+        font-weight: bold;
+        background-color: rgba(255, 68, 0, 0.23);
+        padding: 10px;
+    }
+    .enlace1, .enlace6{
+        background-image: url(../img/1.jpg);
+    }
+     .enlace2, .enlace7{
+        background-image: url(../img/4.jpg);
+    }
+     .enlace3, .enlace8{
+        background-image: url(../img/38.jpg);
+    }
+     .enlace4, .enlace9{
+        background-image: url(../img/12.jpg);
+    }
+     .enlace5{
+        background-image: url(../img/20.jpg);
+    }
+   
+}
+
+
+/*Contenedor imagenes*/
 #imagenes{
 	position: absolute;
 	column-width: 200px;
@@ -47,7 +84,7 @@ nav{
   	margin-right: 50px;
 }
 
-.div3{
+.contTotal{
     display: inline-block;
     margin: 20px 0; 
     padding: 10px;
@@ -73,27 +110,25 @@ nav{
  
 }
 
-.modal {
+/*Contenedor modal*/
+.cont-modal {
     display: none; 
-    position: fixed;
-    z-index: 1; 
-    padding-top: 100px; 
-    left: 0;
-    top: 0;
+    background-color: rgba(187, 186, 186, 0.96);
     width: 100%;
     height: 100%;
-    overflow: auto;
-    background-color: rgb(0,0,0); 
-    background-color: rgba(0,0,0,0.4); 
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1;
 }
 
 /* Contenido Modal */
 .modal-content {
-    background-color: #fefefe;
-    margin: auto;
-    padding: 20px;
+    background-color: #fff;
+    padding: 1%;
+    width: 30%;
+    margin: 1% auto;
     border: 1px solid #888;
-    width: 40%;
     border-radius: $radius;
     .material-icons{
     	color: $colorGris;
@@ -105,14 +140,15 @@ nav{
     	letter-spacing: 2px;
     }
     img{
-    margin: 0 70px;
+    width: 100%;
+    height: 60vh;
     border-radius: $radius;
     }
     a{
        @include botonModal;
        background-color: #ccc9c9;
        color: #7b7878;
-       float:none;
+       float:right;
     }
     a.btnGuardar{
     	@include botonModal;
@@ -121,21 +157,26 @@ nav{
     	@include letraInicial;
     	font-family: 'Lobster';
     }
+    p{
+        font-size: 12px;
+    }
 
 }
 
 /* X para cierre  de Modal */
 .close {
-    color: #fff;
-    float: right;
-    font-size: 28px;
+    position: absolute;
+    color: #fff !important;
+    top: 20px;
+    right: 20px;
+    font-size: 45px;
     font-weight: bold;
-    margin: -90px;
+    cursor: pointer;
 }
 
 .close:hover,
 .close:focus {
-    color: #000;
+    color: $colorGris !important;
     text-decoration: none;
     cursor: pointer;
 }
