--- a/assets/sass/_style.scss
+++ b/assets/sass/_style.scss
@@ -1,141 +1,182 @@
 body{
-	margin: 10px 40px;
-	font-family: 'Montserrat', sans-serif;
+    margin: 10px 40px;
+    font-family: 'Montserrat', sans-serif;
 
 }
 
 nav{
-	padding:10px;
-	border-bottom: 1px solid $whitesmoke;
-	div.buscar{
-		display: inline-block;
+    padding:10px;
+    border-bottom: 1px solid $whitesmoke;
+    div.buscar{
+        display: inline-block;
         background: $whitesmoke;
         padding: 7px;
         border-radius: 7px;
         margin-left: 40px;
-		i{
-			color: $colorGris;
-		}
+        i{
+            color: $colorGris;
+        }
 
-	input{
-		vertical-align: super;
-		height: 25px;
+    input{
+        vertical-align: super;
+        height: 25px;
         border: none;
         background-color: $whitesmoke;
-		}
-	input:focus{
-		outline: initial;
-	}		
-	}
-	ul{
-		float: right;
-		list-style-type: none;
-		li{
-			float:left;
-			margin: 0 10px;
-			a{
-				text-decoration: none;
-				color: $colorGris;
-			}
-		}
-	}
-}
-#imagenes{
-	position: absolute;
-	column-width: 200px;
-  	column-gap: 20px;
-  	margin-right: 50px;
+        }
+    input:focus{
+        outline: initial;
+    }       
+    }
+    ul{
+        float: right;
+        list-style-type: none;
+        li{
+            float:left;
+            margin: 0 10px;
+            a{
+                text-decoration: none;
+                color: $colorGris;
+            }
+        }
+    }
 }
 
-.div3{
+.enlaces{
+    ul{
+        list-style: none;
+        li{
+           display: inline-block;
+           padding: 10px;
+           border-radius: 10px;
+        }
+    }
+     a{
+        text-decoration: none;
+        color: #fff;
+        font-weight: bold;
+        background-color: rgba(255, 68, 0, 0.23);
+        padding: 10px;
+    }
+    .enlace1, .enlace6{
+        background-image: url(../img/1.jpg);
+    }
+     .enlace2, .enlace7{
+        background-image: url(../img/4.jpg);
+    }
+     .enlace3, .enlace8{
+        background-image: url(../img/38.jpg);
+    }
+     .enlace4, .enlace9{
+        background-image: url(../img/12.jpg);
+    }
+     .enlace5{
+        background-image: url(../img/20.jpg);
+    }
+   
+}
+
+
+/*Contenedor imagenes*/
+#imagenes{
+    position: absolute;
+    column-width: 200px;
+    column-gap: 20px;
+    margin-right: 50px;
+}
+
+.contTotal{
     display: inline-block;
     margin: 20px 0; 
     padding: 10px;
     border-bottom: 2px solid #000;
     img{
-    	border-radius: $radius;
+        border-radius: $radius;
     }
     h2{
-    	font-family: 'Lobster';
-    	letter-spacing: 2px;
-    	margin: 0;
+        font-family: 'Lobster';
+        letter-spacing: 2px;
+        margin: 0;
     }
     span{
-    	font-size: 12px;
-    	i{
-    		margin-left: 170px;
-    	}
+        font-size: 12px;
+        i{
+            margin-left: 170px;
+        }
     }
     .letra{
-    	@include letraInicial;
-    	font-family: 'Lobster';
+        @include letraInicial;
+        font-family: 'Lobster';
     }
  
 }
 
-.modal {
+/*Contenedor modal*/
+.cont-modal {
     display: none; 
-    position: fixed;
-    z-index: 1; 
-    padding-top: 100px; 
-    left: 0;
-    top: 0;
+    background-color: rgba(187, 186, 186, 0.96);
     width: 100%;
     height: 100%;
-    overflow: auto;
-    background-color: rgb(0,0,0); 
-    background-color: rgba(0,0,0,0.4); 
+    position: fixed;
+    top: 0;
+    left: 0;
+    z-index: 1;
 }
 
 /* Contenido Modal */
 .modal-content {
-    background-color: #fefefe;
-    margin: auto;
-    padding: 20px;
+    background-color: #fff;
+    padding: 1%;
+    width: 30%;
+    margin: 1% auto;
     border: 1px solid #888;
-    width: 40%;
     border-radius: $radius;
     .material-icons{
-    	color: $colorGris;
-    	padding: 0 10px;
+        color: $colorGris;
+        padding: 0 10px;
     }
     h2{
-    	font-family: 'Lobster';
-    	margin-bottom: 10px;
-    	letter-spacing: 2px;
+        font-family: 'Lobster';
+        margin-bottom: 10px;
+        letter-spacing: 2px;
     }
     img{
-    margin: 0 70px;
+    width: 100%;
+    height: 60vh;
     border-radius: $radius;
     }
     a{
        @include botonModal;
        background-color: #ccc9c9;
        color: #7b7878;
-       float:none;
+       float:right;
     }
     a.btnGuardar{
-    	@include botonModal;
+        @include botonModal;
     }
     .letra{
-    	@include letraInicial;
-    	font-family: 'Lobster';
+        @include letraInicial;
+        font-family: 'Lobster';
+    }
+    p{
+        font-size: 12px;
     }
 
 }
 
 /* X para cierre  de Modal */
 .close {
-    color: #fff;
-    float: right;
-    font-size: 28px;
+    position: absolute;
+    color: #fff !important;
+    top: 20px;
+    right: 20px;
+    font-size: 45px;
     font-weight: bold;
-    margin: -90px;
+    cursor: pointer;
 }
 
 .close:hover,
 .close:focus {
-    color: #000;
+    color: $colorGris !important;
     text-decoration: none;
     cursor: pointer;
 }
